--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,19 @@
         <version>2.17.2</version>
     </dependency>
 
+      <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
+      <dependency>
+          <groupId>jakarta.xml.bind</groupId>
+          <artifactId>jakarta.xml.bind-api</artifactId>
+          <version>4.0.2</version>
+      </dependency>
 
+      <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>4.0.3</version>
+          <scope>runtime</scope>
+      </dependency>
   </dependencies>
     <build>
         <plugins>
